updated initiate command