@@ -70,7 +70,7 @@ public class Manager {
 
             // Terminate the Manager process
             List<Instance> manager = aws.getAllInstancesWithLabel(AWS.Label.Manager);
-            aws.terminateInstance(manager.getFirst().instanceId());
+            aws.terminateInstance(manager.get(0).instanceId());
             System.out.println("Manager shutting down.");
             System.exit(0);
 
